--- a/data/style/default.css
+++ b/data/style/default.css
@@ -15,37 +15,10 @@
  * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  */
 
-@define-color shadow_color rgba (1, 1, 1, 0.6);
-
-.gnome-panel-menu-bar {
-
-    color: @tooltip_fg_color;
-    text-shadow: 0 1 shade (@theme_text_color, 0.7);
-    background-color: none;
-    background-image: -gtk-gradient (linear,
-			         left top,
-			         left bottom,
-			         from (alpha (#3c3c3c, 0.8)),
-			         to (alpha (#2d2d2d, 0.7)));
-
-}
-
-.wingpanel-app-button:active {
-    background-color: red;
-    background-image: none;
-    color: green;
-}
-
-.gnome-panel-menu-bar *:active, .gnome-panel-menu-bar *:selected {
-    background-image: -gtk-gradient (linear,
-			         left top,
-			         left bottom,
-			         from (#2d2d2d),
-			         to (#3c3c3c));
-}
+@define-color shadow_color rgba (1, 1, 1, 0.5);
 
 .shadow {
-    background-color: rgba (0, 0, 0, 0);
+    background-color: @shadow_color;
     background-image: -gtk-gradient (linear,
                      left top, left bottom,
                      from (@shadow_color),
