Change class name from .gnome-panel-menu-bar to .panel to fix bug #1013324.

--- a/data/style/default.css
+++ b/data/style/default.css
@@ -18,7 +18,7 @@
 @define-color shadow_color rgba (0, 0, 0, 0.3);
 @define-color panel_background rgba (0, 0, 0, 0.7);
 
-.gnome-panel-menu-bar {
+.panel {
     padding: 0;
     background-color: @panel_background;
     color: #fff;
